assets/styles.css
body {
    font-family: Baloo;
    width: 100%;
    font-size: 20px;
    background-image: url("./images/floor-tile.png");
    background-attachment: fixed;
}

button:focus, input:focus {
    outline: none;
}

.container { 
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 2%;
    text-align: center;
}

@keyframes pulse
{
  0% {
    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
  }
  100% {
    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0);
  }
}

@keyframes pulse-big
{
  0% {
    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.1);
  }
  100% {
    box-shadow: 0 0 0 70px rgba(0, 0, 0, 0);
  }
}

@keyframes glow-rgb
{
  0% {
    box-shadow: 0 0 10px 2px rgb(255, 0, 0);
  }
  20% {
    box-shadow: 0 0 10px 2px rgb(21, 255, 0);
  }
  40% {
    box-shadow: 0 0 10px 2px rgb(25, 0, 255);
  }
  60% {
    box-shadow: 0 0 10px 2px rgb(255, 0, 242);
  }
  80% {
    box-shadow: 0 0 10px 2px rgb(238, 255, 0);
  }
  100% {
    box-shadow: 0 0 10px 2px rgb(255, 0, 0);
  }
}

@keyframes glitch
{
    0% {
        text-shadow: -8px 0px 0 #00f7ff;
    }
    10% {
        text-shadow: 8px 0px 0 #e100ff;
    }
    20% {
        text-shadow: -8px 0px 0 #00ff6a;
    }
    30% {
        text-shadow: 8px 0px 0 #c8ff00;
    }
    40% {
        text-shadow: -8px 0px 0 #6f00ff;
    }
    50% {
        text-shadow: 8px 0px 0 #ff0000;
    }
    60% {
        text-shadow: -8px 0px 0 #00f7ff00;
    }
    70% {
        text-shadow: 8px 0px 0 #e100ff00;
    }
    80% {
        text-shadow: -8px 0px 0 #00ff6a00;
    }
    90% {
        text-shadow: 8px 0px 0 #c8ff0000;
    }
    100% {
        text-shadow: -8px 0px 0 #6f00ff00;
    }
}

h1 {
    font-size: 7vw;
    text-align: center;
    margin-top: 5%;
    margin-bottom: 5%;
    padding: 15px;
}

h1 {
    font-family: Baloo;
    background: url("./images/rgb.gif");
    background-position: center;
    background-size: 50%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    text-shadow: 0 0 12px #ff009d6e;
}

.gifButton, #clearbutton, #add-gifs, #clearsubmit, #search {
    border: none;
    border-radius: 15px;
    padding: 10px 20px;
    transition: 0.5s;
}

.gifButton {
    background-color: #0099ff;
    color: #ffffff;
    margin: 4px 4px;
}

#add-gifs, #clearsubmit {
    transition: 0.5s;
    cursor: pointer;
}

#add-gifs {
    background-color: #008366;
}

.gifButton:hover {
    box-shadow: 0 0 7px #0099ff;
    -webkit-transform: scale(1.2);
    transition: 0.5s;
    cursor: pointer;
}

#clearbutton {
    border: 1px solid #000000;
    background-color: #ffffffd2;
    margin-top: 2%;
    margin-bottom: 3%;
    margin-left: 6px;
    margin-right: 2px;
    transition: 0.5s;
    color: #000000;
    animation: glow-rgb 5s infinite;
}

#clearbutton, #add-gifs, #clearsubmit {
    font-family: Molengo;
    font-weight: bold;
}

#clearbutton:hover {
    background-color: #ff0000;
    color: #ffffff;
    transition: 0.5s;
    cursor: pointer;
    box-shadow: 0 0 7px #ff0000;
}

#clearbutton:active, .gifButton:active {
    background-color: #ffffff;
    transition: 0.1s;
}

#search {
    animation: pulse 0.5s infinite;
}

#add-gifs:hover, #search:hover, #clearsubmit:hover {
    box-shadow: 0 0 7px #000000;
}

#add-gifs:active, #search:active, #clearsubmit:active {
    box-shadow: 0 0 7px #00ffff;
    transition: 0.1s;
}

#add-gifs, #search {
    margin-bottom: 2%;
}

label {
    color: #ffffff;
    font-size: 20px;
    -webkit-text-stroke-color: #000000;
    -webkit-text-stroke-width: 1px;
}

footer {
    background-color: #00000057;
    height: 40px;
    width: 100%;
    position: fixed;
    bottom: 0;
    text-align: center;
    color: white;
    font-size: 20px;
}

.footer {
    font-family: Righteous;
    background-position: center;
    animation: glitch 0.5s infinite;
    -webkit-text-stroke-color: #000000;
    -webkit-text-stroke-width: 0.5px;
}

h6 {
    margin-top: 11px;
}

.gifIMG {
    background: #ffffff94;
    border: 1px solid #000000;
    border-radius: 15px;
    width: 1%;
    display: table;
    float: left;
    margin: 4px;
    box-shadow: 1px 1px 5px #000000;
}

.gif {
    border-top-left-radius: 13px;
    border-top-right-radius: 13px;
    border-bottom: 1px solid #000000;
}

.scrolling, .scrolling2 {
    position: fixed;
}

.scrolling {
    top: 0;
    width: 100%;
}

.scrolling2 {
    top: 80px;
    width: 100%;
}

